<?xml version="1.0"?>
<package>
  <name>xdrive_unit</name>
  <version>0.0.1</version>
  <description>The xdrive_unit package converted to catkin</description>

  <maintainer email="author@163.com">author</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
 <build_depend>geometry_msgs</build_depend>
  <build_depend>tf</build_depend>
 <build_depend>message_generation</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
 <run_depend>geometry_msgs</run_depend>
  <run_depend>tf</run_depend>
 <run_depend>message_runtime</run_depend>

  <export>
  </export>
</package>


